src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>rC_Connect__Ask_1_Amount__c</fullName>
        <label>Ask 1 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Ask_2_Amount__c</fullName>
        <label>Ask 2 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Ask_3_Amount__c</fullName>
        <label>Ask 3 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Campaign_Ask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Ask</label>
        <referenceTo>rC_Connect__Campaign_Ask__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Has_Volunteered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually populated, indicates the Campaign Member &apos;Has Volunteered.&quot;</description>
        <inlineHelpText>Indicates the Campaign Member &apos;Has Volunteered.&quot;</inlineHelpText>
        <label>Has Volunteered?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Hours_Voluntered__c</fullName>
        <description>Manually populated, indicates the number of &quot;Hours Volunteered.&quot;</description>
        <inlineHelpText>Indicates the number of &quot;Hours Volunteered.&quot;</inlineHelpText>
        <label># Hours Voluntereed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Opportunity__c</fullName>
        <label>Opportunity</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Connect__Public_Token__c</fullName>
        <description>Manually or automatically populated, used by external middleware to public and uniquely identify the campaign member record, without publicly exposing Salesforce IDs. Typically a random SHA256 or MD5.</description>
        <inlineHelpText>&quot;Public Token&quot; of the campaign member.</inlineHelpText>
        <label>Public Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Attendance_Date__c</fullName>
        <description>Auto populated, indicates the date on which the Campaign Member attended the Event.</description>
        <inlineHelpText>Date on which the Campaign Member attended the Event.</inlineHelpText>
        <label>Attendance Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Event__Attendance_Status__c</fullName>
        <description>Auto populated, indicates the status of the Campaign Member attending the Event.</description>
        <inlineHelpText>Status of the Campaign Member attending the Event.</inlineHelpText>
        <label>Attendance Status</label>
        <picklist>
            <picklistValues>
                <fullName>Checked In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Event__Billing_City__c</fullName>
        <description>Auto populated, this field shows a Campaign Member&apos;s Billing City.</description>
        <inlineHelpText>Campaign Member&apos;s Billing City.</inlineHelpText>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Billing_Country__c</fullName>
        <description>Auto populated, this field shows a Campaign Member&apos;s Billing Country.</description>
        <inlineHelpText>Campaign Member&apos;s Billing Country.</inlineHelpText>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Billing_Postal_Code__c</fullName>
        <description>Auto populated, this field shows a Campaign Member&apos;s Billing Postal Code.</description>
        <inlineHelpText>Campaign Member&apos;s Billing Postal Code.</inlineHelpText>
        <label>Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Billing_State__c</fullName>
        <description>Auto populated, this field shows a Campaign Member&apos;s Billing State/Province.</description>
        <inlineHelpText>Campaign Member&apos;s Billing State/Province.</inlineHelpText>
        <label>Billing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Billing_Street_Line_1__c</fullName>
        <description>Auto populated, this field shows a Campaign Member&apos;s Billing Street.</description>
        <inlineHelpText>Campaign Member&apos;s Billing Street 1.</inlineHelpText>
        <label>Billing Street Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Billing_Street_Line_2__c</fullName>
        <description>Auto populated, this field shows a Campaign Member&apos;s Billing Street.</description>
        <inlineHelpText>Campaign Member&apos;s Billing Street 2</inlineHelpText>
        <label>Billing Street Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Billing_Street__c</fullName>
        <description>Auto populated, this field shows a Campaign Member&apos;s Billing Street.</description>
        <formula>TRIM(IF(AND(ISBLANK(rC_Event__Billing_Street_Line_1__c), ISBLANK(rC_Event__Billing_Street_Line_2__c)), &apos;&apos;, IF(AND(ISBLANK(rC_Event__Billing_Street_Line_1__c)), rC_Event__Billing_Street_Line_2__c, rC_Event__Billing_Street_Line_1__c + &apos;, &apos; + rC_Event__Billing_Street_Line_2__c)))</formula>
        <inlineHelpText>Campaign Member&apos;s Billing Street.</inlineHelpText>
        <label>Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Campaign_Group_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auto populated, Lookup to the first Campaign Group this member belongs to.</description>
        <inlineHelpText>First Campaign Group this member belongs to.</inlineHelpText>
        <label>Campaign Group 1</label>
        <referenceTo>rC_Event__Campaign_Group__c</referenceTo>
        <relationshipLabel>Campaign Members (Campaign Group 1)</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Event__Campaign_Group_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auto populated, Lookup to the second Campaign Group this member belongs to.</description>
        <inlineHelpText>Second Campaign Group this member belongs to.</inlineHelpText>
        <label>Campaign Group 2</label>
        <referenceTo>rC_Event__Campaign_Group__c</referenceTo>
        <relationshipLabel>Campaign Members (Campaign Group 2)</relationshipLabel>
        <relationshipName>Campaign_Members_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Event__Campaign_Group_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auto populated, Lookup to the third Campaign Group this member belongs to.</description>
        <inlineHelpText>Third Campaign Group this member belongs to.</inlineHelpText>
        <label>Campaign Group 3</label>
        <referenceTo>rC_Event__Campaign_Group__c</referenceTo>
        <relationshipLabel>Campaign Members (Campaign Group 3)</relationshipLabel>
        <relationshipName>Campaign_Members_3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Event__Card_Expiration_Month__c</fullName>
        <description>Manually populated, this field shows a Charge Card&apos;s Expiration Month.</description>
        <inlineHelpText>Charge Card&apos;s Expiration Month.</inlineHelpText>
        <label>@Deprecated(Version=1.17)</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Event__Card_Expiration_Year__c</fullName>
        <description>Manually populated, this field shows a Charge Card&apos;s Expiration Year.</description>
        <inlineHelpText>Charge Card&apos;s Expiration Year.</inlineHelpText>
        <label>@Deprecated(Version=1.17)</label>
        <picklist>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Event__Card_Holder_Name__c</fullName>
        <description>Manually populated, this field shows a Charge Card&apos;s Cardholder Name.</description>
        <inlineHelpText>Charge Card&apos;s Cardholder Name.</inlineHelpText>
        <label>@Deprecated(Version=1.17)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Card_Number__c</fullName>
        <description>Manually populated, this field shows a Charge Card number. Exclude spaces and dashes when entering.</description>
        <inlineHelpText>Charge Card number. Exclude spaces and dashes when entering.</inlineHelpText>
        <label>@Deprecated(Version=1.17)</label>
        <length>18</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>rC_Event__Card_Security_Code__c</fullName>
        <description>Manually populated, this field contains the 3 digit Security Code found on the back of a credit. card which is masked upon save.</description>
        <inlineHelpText>3 digit Security Code found on the back of a credit card which is masked upon save.</inlineHelpText>
        <label>@Deprecated(Version=1.17)</label>
        <length>4</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>rC_Event__Contact_Address_Type__c</fullName>
        <label>Contact Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Event__Email__c</fullName>
        <description>Email of lead and contact</description>
        <inlineHelpText>Email of lead and contact</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rC_Event__First_Name__c</fullName>
        <description>First Name of lead or contact</description>
        <inlineHelpText>First Name of lead or contact</inlineHelpText>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Guest_Of__c</fullName>
        <label>Guest Of</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is only used for Visualforce page UI support.</description>
        <inlineHelpText>This field is only used for Visualforce page UI support.</inlineHelpText>
        <label>Selected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Event__Is_Staged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean flag to denote if the current record is a staged record why background processing is pending.</description>
        <inlineHelpText>Boolean flag to denote if the current record is a staged record why background processing is pending.</inlineHelpText>
        <label>Is Staged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Event__Item_1_Item_ID__c</fullName>
        <label>Item 1: Item ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Item_1_Item_Name__c</fullName>
        <description>Indicates name of Item of type 1 purchased.</description>
        <inlineHelpText>Name of Item 1</inlineHelpText>
        <label>Item 1: Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Item_1_Purchase_Price__c</fullName>
        <label>Item 1: Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Event__Item_1_Purchase_Quantity__c</fullName>
        <label>Item 1: Purchase Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Item_2_Item_ID__c</fullName>
        <label>Item 2: Item ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Item_2_Item_Name__c</fullName>
        <description>Indicates name of Item of type 2 purchased.</description>
        <inlineHelpText>Name of Item 2</inlineHelpText>
        <label>Item 2: Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Item_2_Purchase_Price__c</fullName>
        <label>Item 2: Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Event__Item_2_Purchase_Quantity__c</fullName>
        <label>Item 2: Purchase Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Item_3_Item_ID__c</fullName>
        <label>Item 3: Item ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Item_3_Item_Name__c</fullName>
        <description>Indicates name of Item of type 3 purchased.</description>
        <inlineHelpText>Name of Item 3</inlineHelpText>
        <label>Item 3: Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Item_3_Purchase_Price__c</fullName>
        <label>Item 3: Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Event__Item_3_Purchase_Quantity__c</fullName>
        <label>Item 3: Purchase Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Item_ID_Quantity_Zero__c</fullName>
        <description>Stores Item Ids with quantity zero</description>
        <inlineHelpText>Stores Item Ids with quantity zero</inlineHelpText>
        <label>Item ID Quantity Zero</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Last_Name__c</fullName>
        <description>Last Name of lead or contact</description>
        <inlineHelpText>Last Name of lead or contact</inlineHelpText>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Meal_1_Meal_ID__c</fullName>
        <description>Auto populated, indicates the ID of meal Type 1 purchased.</description>
        <inlineHelpText>ID of meal Type 1 purchased.</inlineHelpText>
        <label>Meal 1: Meal ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Meal_1_Purchase_Price__c</fullName>
        <description>Auto populated, indicates the price of meals of Type 1 purchased.</description>
        <inlineHelpText>Price of meals of Type 1 purchased.</inlineHelpText>
        <label>Meal 1: Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Event__Meal_1_Purchase_Quantity__c</fullName>
        <description>Auto populated, indicates the number of meals of Type 1 purchased.</description>
        <inlineHelpText>Number of meals of Type 1 purchased.</inlineHelpText>
        <label>Meal 1: Purchase Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Meal_1_Status__c</fullName>
        <description>Auto populated, indicates the Status of meals of Type 1 purchased.</description>
        <inlineHelpText>Status of meals of Type 1 purchased.</inlineHelpText>
        <label>Meal 1: Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Event__Meal_2_Meal_ID__c</fullName>
        <description>Auto populated, indicates the ID of meal Type 2 purchased.</description>
        <inlineHelpText>ID of meal Type 2 purchased.</inlineHelpText>
        <label>Meal 2: Meal ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Meal_2_Purchase_Price__c</fullName>
        <description>Auto populated, indicates the price of meals of Type 2 purchased.</description>
        <inlineHelpText>Price of meals of Type 2 purchased.</inlineHelpText>
        <label>Meal 2: Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Event__Meal_2_Purchase_Quantity__c</fullName>
        <description>Auto populated, indicates the number of meals of Type 2 purchased.</description>
        <inlineHelpText>Number of meals of Type 2 purchased.</inlineHelpText>
        <label>Meal 2: Purchase Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Meal_2_Status__c</fullName>
        <description>Auto populated, indicates the Status of meals of Type 2 purchased.</description>
        <inlineHelpText>Status of meals of Type 2 purchased.</inlineHelpText>
        <label>Meal 2: Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Event__Meal_3_Meal_ID__c</fullName>
        <description>Auto populated, indicates the ID of meal Type 3 purchased.</description>
        <inlineHelpText>ID of meal Type 3 purchased.</inlineHelpText>
        <label>Meal 3: Meal ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Meal_3_Purchase_Price__c</fullName>
        <description>Auto populated, indicates the price of meals of Type 3 purchased.</description>
        <inlineHelpText>Price of meals of Type 3 purchased.</inlineHelpText>
        <label>Meal 3: Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Event__Meal_3_Purchase_Quantity__c</fullName>
        <description>Auto populated, indicates the number of meals of Type 3 purchased.</description>
        <inlineHelpText>Number of meals of Type 3 purchased.</inlineHelpText>
        <label>Meal 3: Purchase Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Meal_3_Status__c</fullName>
        <description>Auto populated, indicates the Status of meals of Type 3 purchased.</description>
        <inlineHelpText>Status of meals of Type 3 purchased.</inlineHelpText>
        <label>Meal 3: Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Event__Meal_ID_Quantity_Zero__c</fullName>
        <description>Stores Meal Ids with quantity zero</description>
        <inlineHelpText>Stores Meal Ids with quantity zero</inlineHelpText>
        <label>Meal ID Quantity Zero</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Member_Email__c</fullName>
        <formula>BLANKVALUE(Lead.Email, Contact.Email)</formula>
        <label>Member Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Member_Name__c</fullName>
        <description>Formula field providing the Campaign Member&apos;s Full Name.</description>
        <formula>IF(NOT(ISBLANK(LeadId)), Lead.FirstName + &apos; &apos; + Lead.LastName, Contact.FirstName + &apos; &apos; + Contact.LastName)</formula>
        <inlineHelpText>Campaign Member&apos;s Full Name.</inlineHelpText>
        <label>Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Member_Phone__c</fullName>
        <formula>BLANKVALUE(Lead.Phone, Contact.Phone)</formula>
        <label>Member Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Member_Role__c</fullName>
        <description>Automatically populated, indicates the function a Campaign Member plays in an Event.</description>
        <inlineHelpText>Function this Campaign Member plays in an Event.</inlineHelpText>
        <label>Member Role</label>
        <picklist>
            <picklistValues>
                <fullName>Founder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Event__Parent_Campaign_Member__c</fullName>
        <label>Parent Campaign Member</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Payment_Log__c</fullName>
        <description>Payment processor log</description>
        <inlineHelpText>Payment processor log</inlineHelpText>
        <label>Payment Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rC_Event__Payment_Method__c</fullName>
        <description>Manually populated, this field indicates the type of payment method.</description>
        <inlineHelpText>Type of payment method.</inlineHelpText>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash/Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Event__Payment_Processor_Foreign_GUID__c</fullName>
        <description>The unique GUID that represents the charge card information for this payment. This field only has a value when the integrated payment vendor is themselves passing on the charge card information to another party for processing.</description>
        <inlineHelpText>The unique GUID that represents the charge card information for this payment. This field only has a value when the integrated payment vendor is themselves passing on the charge card information to another party for processing.</inlineHelpText>
        <label>Payment Processor Foreign GUID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Payment_Processor_GUID__c</fullName>
        <description>The unique GUID that represents the charge card information for this payment.</description>
        <inlineHelpText>The unique GUID that represents the charge card information for this payment.</inlineHelpText>
        <label>Payment Processor GUID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Payment_Processor__c</fullName>
        <description>The third-party vendor that processed this payment.</description>
        <inlineHelpText>The third-party vendor that processed this payment.</inlineHelpText>
        <label>Payment Processor</label>
        <picklist>
            <picklistValues>
                <fullName>Corduro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Event__Payment_Status__c</fullName>
        <description>Automatically populated, reflects the status of processing related payment.</description>
        <inlineHelpText>Status of processing related payment.</inlineHelpText>
        <label>Payment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncollectible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Event__Payment_Transaction_Time__c</fullName>
        <description>The date/time that the payment processor states this payment was transacted through their system.</description>
        <inlineHelpText>The date/time that the payment processor states this payment was transacted through their system.</inlineHelpText>
        <label>Payment Transaction Time</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registered_Count__c</fullName>
        <description>Auto Populated, indicates the number of Attendees registered for the Event this Campaign Member is registered for.</description>
        <inlineHelpText>Number of Attendees registered for the Event this Campaign Member is registered for.</inlineHelpText>
        <label>Registration Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registered_Date__c</fullName>
        <description>Auto populated, indicates the date and time this Campaign Member registered.</description>
        <inlineHelpText>Date and time this Campaign Member registered.</inlineHelpText>
        <label>Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registered_Meal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auto populated, Look up to this Campaign Member&apos;s Meal.</description>
        <inlineHelpText>Look up to this Campaign Member&apos;s Meal.</inlineHelpText>
        <label>Registered Meal</label>
        <referenceTo>rC_Event__Campaign_Meal__c</referenceTo>
        <relationshipLabel>Campaign Members (Registered Meal)</relationshipLabel>
        <relationshipName>Campaign_Members_Registered_Meal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registered_Seat__c</fullName>
        <description>Automatically populated, indicates the Campaign Member&apos;s Seat #.</description>
        <inlineHelpText>Campaign Member Seat #.</inlineHelpText>
        <label>Registered Seat #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registered_Status__c</fullName>
        <description>Automatically populated, indicates the Campaign Member registration status.</description>
        <inlineHelpText>Indicates the Campaign Member registration status.</inlineHelpText>
        <label>Registration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Invited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSVPed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waitlisted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registered_Table_Name__c</fullName>
        <formula>rC_Event__Registered_Table__r.rC_Event__Locator_Code__c</formula>
        <label>Registered Table Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registered_Table__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auto populated, when campaign member is assigned to a table for current the campaign-venue.</description>
        <inlineHelpText>Auto populated, when campaign member is assigned to a table for current the campaign-venue.</inlineHelpText>
        <label>Registered Table</label>
        <referenceTo>rC_Event__Campaign_Venue__c</referenceTo>
        <relationshipLabel>Campaign Members (Registered Table)</relationshipLabel>
        <relationshipName>Campaign_Members_Registered_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registered_Venue_Name__c</fullName>
        <formula>rC_Event__Registered_Venue__r.rC_Event__Venue_Name__c</formula>
        <label>Registered Venue</label>
        <type>Text</type>
    </fields>
</CustomObject>